--- a/varnish50-61/Dockerfile
+++ b/varnish50-61/Dockerfile
@@ -1,10 +1,13 @@
 # Varnish Docker image based on Debian 9.9 (Stretch) slim, compiling Varnish from scratch.
 #
 # We have two installation groups, for compilation and runtime, and we delete the compilation one at the end.
-# Group for compilation: https://varnish-cache.org/docs/5.1/installation/install.html
+# Group for compilation: https://varnish-cache.org/docs/6.1/installation/install.html
 # Group for runtime: https://packages.debian.org/stable/varnish
 #
-# Last updated: 21 June 2019
+# Example of how to build the image:
+#   docker build --build-arg VARNISH_VERSION=6.1.1 -t ernestojpg/varnish:6.1.1 -f varnish50-61/Dockerfile .
+#
+# Last updated: 26 June 2019
 # Current image size: 162MB
 
 FROM debian:9.9-slim
@@ -14,7 +17,7 @@ LABEL maintainer="Ernesto J. Perez <ernestojpg@gmail.com>"
 # Default to UTF-8 file.encoding
 ENV LANG C.UTF-8
 
-ARG VARNISH_VERSION=5.1.3
+ARG VARNISH_VERSION=6.1.1
 
 ENV VARNISH_VERSION=${VARNISH_VERSION} \
     VARNISH_VCL_CONF=/etc/varnish/default.vcl \
@@ -22,7 +25,7 @@ ENV VARNISH_VERSION=${VARNISH_VERSION} \
 
 COPY start-varnish.sh /tmp/
 
-RUN set -x \
+RUN set -eux \
  && addgroup --system varnish \
  && adduser --system --disabled-password --no-create-home --home /nonexistent \
             --shell /usr/sbin/nologin --ingroup varnish --gecos 'Varnish Cache' varnish \
@@ -33,13 +36,13 @@ RUN set -x \
  && apt-get update \
  && apt-get install --no-install-recommends --no-install-suggests -y \
         # Packages required only for compilation
-        make automake autotools-dev libedit-dev \
+        make automake autoconf-archive autotools-dev libedit-dev \
         libjemalloc-dev libncurses5-dev libpcre3-dev \
-        libtool pkg-config python-docutils python-sphinx \
+        libtool pkg-config python-docutils python-sphinx graphviz \
         ca-certificates wget \
         # Packages required at runtime
         gcc init-system-helpers libbsd0 libc6 libc6-dev libedit2 libjemalloc1 libncurses5 \
-        libpcre3 libtinfo5 lsb-base \
+        libpcre3 libtinfo5 \
  && wget -q https://varnish-cache.org/_downloads/varnish-${VARNISH_VERSION}.tgz \
  && tar -xzf varnish-${VARNISH_VERSION}.tgz \
  && cd varnish-${VARNISH_VERSION} \
@@ -49,9 +52,9 @@ RUN set -x \
  && make install \
  # Delete all packages required only for compilation
  && apt-get remove --purge --auto-remove -y \
-        make automake autotools-dev libedit-dev \
+        make automake autoconf-archive autotools-dev libedit-dev \
         libjemalloc-dev libncurses5-dev libpcre3-dev \
-        libtool pkg-config python-docutils python-sphinx \
+        libtool pkg-config python-docutils python-sphinx graphviz \
         ca-certificates wget \
  && strip /usr/local/bin/varnish* \
  && strip /usr/local/sbin/varnish* \
